<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_emoji_chooser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:padding="@dimen/small_common_padding"
    android:theme="@style/Theme.ZulipChat.MessageActions">

    <View
        android:id="@+id/sheet_puller"
        android:layout_width="@dimen/puller_width"
        android:layout_height="@dimen/puller_height"
        android:layout_marginTop="@dimen/small_common_padding"
        android:background="@drawable/ic_sheet_puller"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/common_margin_large" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/common_margin_large" />

    <TextView
        android:id="@+id/move_message_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:text="@string/move_message"
        android:textSize="@dimen/bottom_sheet_title_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/start_guideline"
        app:layout_constraintRight_toRightOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/sheet_puller" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_topic_input_layout"
        style="@style/Theme.ZulipChat.SurfaceEditText"
        app:hintEnabled="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_mid"
        android:textSize="@dimen/edit_message_text_size"
        app:layout_constraintLeft_toLeftOf="@id/start_guideline"
        app:layout_constraintRight_toRightOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/move_message_title"
        app:layout_constraintVertical_chainStyle="packed">

        <AutoCompleteTextView
            android:id="@+id/new_topic_autocomplete_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:hint="@string/new_topic"
            android:inputType="text"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/notify_new_topic_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notify_new_topic"
        app:layout_constraintBottom_toTopOf="@id/notify_old_topic_checkbox"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/new_topic_input_layout" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/notify_old_topic_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notify_old_topic"
        app:layout_constraintBottom_toTopOf="@id/action_container"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/notify_new_topic_checkbox" />

    <FrameLayout
        android:id="@+id/action_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notify_old_topic_checkbox">

        <Button
            android:id="@+id/move_message_button"
            style="@style/Theme.ZulipChat.Button"
            android:layout_width="@dimen/action_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/move"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/moving_message_progress_bar"
            style="@style/Theme.ZulipChat.CircularProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

    <include
        android:id="@+id/state_box"
        layout="@layout/item_state_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>