<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_emoji_chooser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:padding="@dimen/small_common_padding"
    android:theme="@style/Theme.ZulipChat.MessageActions">

    <View
        android:id="@+id/sheet_puller"
        android:layout_width="@dimen/puller_width"
        android:layout_height="@dimen/puller_height"
        android:layout_marginTop="@dimen/small_common_padding"
        android:background="@drawable/ic_sheet_puller"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/common_margin_large" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/common_margin_large" />

    <TextView
        android:id="@+id/edit_message_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:text="@string/edit_message"
        android:textSize="@dimen/bottom_sheet_title_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/start_guideline"
        app:layout_constraintRight_toRightOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/sheet_puller" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_message_content_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/common_margin_mid"
        android:layout_height="@dimen/edit_text_input_layout_height"
        android:hint="@string/new_content"
        android:textSize="@dimen/edit_message_text_size"
        app:layout_constraintLeft_toLeftOf="@id/start_guideline"
        app:layout_constraintRight_toRightOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/edit_message_title"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/message_content_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:padding="@dimen/input_layout_padding"
            android:textColor="@color/text"
            android:textSize="@dimen/edit_message_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/action_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/common_margin_mid"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_message_content_input_layout">

        <Button
            android:id="@+id/edit_message_button"
            style="@style/Theme.ZulipChat.Button"
            android:layout_width="@dimen/action_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/apply"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/editing_message_progress_bar"
            style="@style/Theme.ZulipChat.CircularProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>


    <include
        android:id="@+id/state_box"
        layout="@layout/item_state_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>